# kingdom_come

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sync-to-hub.yml
app/: __init__.py  app.py  build_info.py
app/assets/: .gitkeep  hf_community_post_body.md  hf_community_post_draft.txt
app/components/: markdown_math.py  neon.py  periodic_picker.py  theme.py  ui_math.py
app/pages/: bitcoin_pi_cycle_observations.py  book_mode.py  (+16 more)
docs/: index.md
notebooks/: 01_hopf_fibration_fundamentals.ipynb
observations/: phi_e_pi_mystery.md  pulsars_investigation.md  superconductors_investigation.md
scripts/: batch_imagine_art.py  generate_demo_gif.py  generate_element_art.py  generate_flux_demo_gif.py  generate_noble_gas_art.py  generate_preview.py  generate_showcase_thumbs.py  generate_z_known_frames.py  import_imagine_art.py  ingest_imagine_batch.py  post_hf_community.py  sync_paper_assets.sh  z_flywheel_map_demo.py
tests/: test_bitcoin_pi_cycle_observations.py  test_book_mode.py  test_constants.py  test_elements.py  test_experimental_data.py  test_flux_flywheel.py  test_higgs_observations.py  test_hopf.py  test_lattice.py  test_markdown_math.py  test_monster_irreps.py  test_monster_toroidal_bridge.py  test_observations.py  test_observations_trends.py  test_pages.py  test_papers.py  test_phi_e_pi_mystery.py  test_pulsars_observations.py  test_representation_complexity.py  test_schumann_observations.py  test_showcase.py  test_superconductors_observations.py  test_tls_trees_observations.py  test_toroidal_periodic.py  test_ui_math.py
(+36 files in other folders)
