[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kingdom-come"
version = "0.1.0"
description = "Kingdom Come — Aaron's Hopf Fibration Theory of Everything"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aaron", email = "kinaar111@users.noreply.huggingface.co" }]
keywords = ["hopf-fibration", "physics", "quaternions", "topology", "TOE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gradio>=4.0",
    "plotly>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "pandas>=2.0",
    "pillow>=10.0",
    "pymupdf>=1.24",
    # Shared core (Hopf / quaternion / φ-e-π / κ constants).
    # Install first: pip install -e ../flux_hopf_lib
    # or: pip install "flux-hopf-lib==0.2.2"
    "flux-hopf-lib>=0.2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://huggingface.co/kinaar111"
Repository = "https://github.com/kinaar8340/kingdom-come"
Documentation = "https://github.com/kinaar8340/kingdom-come#readme"

[project.scripts]
kingdom-app = "app.app:build_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"